--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     </tr>
     <tr>
             <td>Họ và Tên</td>
-            <td colspan="3">   <input type="textbox" name="name" placeholder="Your name"size="50"></td>
+            <td colspan="3">   <input type="text" name="name" placeholder="Your name"size="50"></td>
 
     </tr>
 
     <tr>
             <td>Email:</td>
-            <td colspan="3"> <input type="textbox"  placeholder="Your email" size="50"></td>
+            <td colspan="3"> <input type="text"  placeholder="Your email" size="50"></td>
     </tr>
 
     <tr>
@@ -42,8 +42,8 @@
 
 
     <tr>
-            <td><input type="submit" class="btn"value="Gửi Thông Tin"/></td>
-            <td><input type="reset" class="btn"value="Nhập Lại"/></td>
+            <td><input type="submit" class="btn" value="Gửi Thông Tin"/></td>
+            <td><input type="reset" class="btn" value="Nhập Lại"/></td>
     </tr>
 
 </table>
